--- a/main.html
+++ b/main.html
@@ -11,6 +11,36 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<table>
+
+		<thead>
+<tr>   
+	<th> Roll number</th>
+	<th> Name</th>
+</tr>
+	</thead>
+
+		<tbody>
+<tr> 
+	<td> 065</td>
+	<td> Ram</td>
+</tr>
+			<tr> 
+	<td> 066</td>
+	<td> Sam</td>
+</tr>
+			<tr> 
+	<td> 067</td>
+	<td> Ram</td>
+</tr>
+
+			
+		</tbody>
+
+
+		
+	</table>
+
 </body>
 
 </html>
